<resources>
    <string name="app_name">Заметки</string>
    <string name="enter_pin">Введите пин:</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_delete">←</string>
    <string name="pin_circle">pin_circle</string>
    <string name="pin_code_notice">Пин код ограничен 4 цифрами</string>
    <string name="invalid_pin_code">Пин код введён некорректно</string>
    <string name="new_pin_code">Новый пин-код</string>
    <string name="saveBtn">Сохранить</string>
    <string name="password_visibility">Видимость пароля</string>
    <string name="password_saved">Пароль сохранён</string>
    <string name="enter_four_digits">Введите 4 цифры</string>
    <string name="note_title">Заголовок заметки</string>
    <string name="noteText">Текст заметки</string>
    <string name="deadLine">Временное ограничение</string>
    <string name="open_calendar">Open calendar</string>
    <string name="date_and_time">Дата и время</string>
    <string name="empty_fields_notice">Заполните хотя бы одно поле</string>
    <string name="note_created_successfully">Заметка создана</string>
    <string name="double_notes_notice">Заметка с таким заголовком уже существует</string>
    <string name="save_icon">saveIcon</string>
    <string name="title_activity_list_of_notes">ListOfNotesActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings_icon">Settings_icon</string>
    <string name="notes">Заметки</string>
    <string name="new_note">Новая заметка</string>
    <string name="settings">Настройки</string>
    <string name="double_back_pressed">Нажмите ещё раз, чтобы выйти</string>
    <string name="attention">Внимание</string>
    <string name="note_delete_notice">Вы уверены, что хотите удалить эту заметку?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
</resources>
