<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PinCodeActivity">

    <TextView
        android:id="@+id/pinCodeTextView"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin"
        android:textColor="@color/colorFullPinCircle"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_one"
        style="@style/MyPinButtonStyle"
        android:layout_marginStart="32dp"
        android:text="@string/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/button_two"
        style="@style/MyPinButtonStyle"
        android:text="@string/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toTopOf="@+id/button_one" />

    <Button
        android:id="@+id/button_three"
        style="@style/MyPinButtonStyle"
        android:layout_marginEnd="32dp"
        android:text="@string/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toTopOf="@+id/button_two" />

    <Button
        android:id="@+id/button_four"
        style="@style/MyPinButtonStyle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_five"
        style="@style/MyPinButtonStyle"
        android:text="@string/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toTopOf="@+id/button_four" />

    <Button
        android:id="@+id/button_six"
        style="@style/MyPinButtonStyle"
        android:layout_marginEnd="32dp"
        android:text="@string/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toTopOf="@+id/button_five" />

    <Button
        android:id="@+id/button_seven"
        style="@style/MyPinButtonStyle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_eight"
        style="@style/MyPinButtonStyle"
        android:text="@string/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toTopOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_nine"
        style="@style/MyPinButtonStyle"
        android:layout_marginEnd="32dp"
        android:text="@string/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toTopOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_zero"
        style="@style/MyPinButtonStyle"
        android:layout_marginTop="8dp"
        android:text="@string/button_0"
        app:layout_constraintEnd_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_delete"
        style="@style/MyPinButtonStyle"
        android:text="@string/button_delete"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button_nine"
        app:layout_constraintTop_toTopOf="@+id/button_zero" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <ImageView
        android:id="@+id/pinCircleFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/pinCircleSecond"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

    <ImageView
        android:id="@+id/pinCircleSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/pinCircleThird"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pinCircleFirst"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

    <ImageView
        android:id="@+id/pinCircleThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/pinCircleFourth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pinCircleSecond"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

    <ImageView
        android:id="@+id/pinCircleFourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pinCircleThird"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

</androidx.constraintlayout.widget.ConstraintLayout>