<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".NewNotesActivity">

    <EditText
        android:id="@+id/noteTitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Title"
        android:ems="10"
        android:hint="@string/note_title"
        android:inputType="textNoSuggestions|textPersonName"
        android:privateImeOptions="nm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteTextEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Note"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/noteText"
        android:inputType="textNoSuggestions|textMultiLine"
        android:privateImeOptions="nm"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitleEditText" />

    <CheckBox
        android:id="@+id/deadLineCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/deadLine"
        app:layout_constraintBottom_toTopOf="@+id/dateTimeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/dateTimeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints="Data"
        android:ems="10"
        android:hint="@string/date_and_time"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/calendarImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadLineCheckBox"
        tools:ignore="LabelFor,TextFields" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageButton
        android:id="@+id/calendarImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/open_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/dateTimeEditText"
        app:layout_constraintEnd_toEndOf="@+id/noteTextEditText"
        app:layout_constraintTop_toTopOf="@+id/dateTimeEditText"
        app:srcCompat="@drawable/ic_date_range_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>