<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pin_code"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPinCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/new_pin_code"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/visibilityImageButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/saveBtn"
        app:layout_constraintEnd_toEndOf="@+id/visibilityImageButton"
        app:layout_constraintStart_toStartOf="@+id/newPinCodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/newPinCodeEditText" />

    <ImageButton
        android:id="@+id/visibilityImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/password_visibility"
        android:src="@drawable/ic_visibility_off_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newPinCodeEditText"
        app:srcCompat="@drawable/ic_visibility_off_black_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>